@@ -1,44 +1,25 @@
 #### JspAgent安装说明
 
-##### 一、 简介
+##### Windows安装说明
+**1. Tomcat/Tomee**
 
-JSPAgent 主要功能有两项：
+官网 tomcat 版本
 
-1、 漏洞防护功能 ：
+假设 tomcat 工作目录 ：CATALINA_HOME =C:\Program Files\Apache Software Foundation\Tomcat 6.0
 
-```
-1） 针对 Struts2 远程命令执行和文件上传漏洞的防护。
-2） 针对 WebLogic 对象反序列化漏洞的防护。
-3） 针对命令执行漏洞的防护
-4） 针对任意文件读取漏洞的防护
-5） 针对文件上传漏洞的防护
-6） 针对SQL注入漏洞的防护
-```
+1）拷贝 jspAgent 目录到 %CATALINA_HOME% 下。
 
-2、 动态（基于行为）识别JSP 类型的Webshell。
+2）修改JAVA启动参数：注册表中Options的值
+    
+    x86:HKEY_LOCAL_MACHINE\SOFTWARE\Apache Software Foundation\Procrun 2.0\tomcat6\Parameters\Java
+    x64:HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Apache Software Foundation\Procrun 2.0\tomcat6\Parameters\Java
+修改如下
 
-```
-注意 ： 
-1、Web容器使用的Java(jdk或jre)的版本需1.6 及 以上。
-2、SQL注入防护目前支持的数据库包括：Mysql、 Oracle、 Sqlserver、 Postgresql 四种。
-```
-##### 二、 工作原理
-利用 JAVA 虚拟机 启动选项 ：-javaagent， 使 jspAgent.jar 可以跟踪处理 web 请求上下文， 并针对可疑行为， 做出相应的动作。
-##### 三、 安装说明
-云锁安装包会提供一个名为 jspAgent的目录，目录结构：
-	
-    Linux 版：
-        /jspAgent/JSPAgent.jar
-        /jspAgent/libJSPAgent.so
-        /jspAgent/liblitexml_linux.so
-    Windows 版：
-        /jspAgent/JSPAgent.jar
-        /jspAgent/JSPAgent.dll
-        /jspAgent/msvcp100.dll
-        /jspAgent/msvcr100.dll
-	/jspAgent/litexml.dll
-	/jspAgent/x64/JSPAgent.dll
-	/jspAgent/x64/msvcp100.dll
-	/jspAgent/x64/msvcr100.dll
-	/jspAgent/x64/litexml.dll
-
+    -Dcatalina.home=C:\Program Files\Apache Software Foundation\Tomcat 6.0
+    -Dcatalina.base=C:\Program Files\Apache Software Foundation\Tomcat 6.0
+    -Djava.endorsed.dirs=C:\Program Files\Apache Software Foundation\Tomcat 6.0\endorsed
+    -Djava.io.tmpdir=C:\Program Files\Apache Software Foundation\Tomcat 6.0\temp
+    -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
+    -Djava.util.logging.config.file=C:\Program Files\Apache Software Foundation\Tomcat6.0\conf\logging.properties
+    ------追加下面这一行---
+    -javaagent:C:\Program Files\Apache Software Foundation\Tomcat 6.0\jspAgent\JSPAgent.jar
